setting up base html template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="/css/main.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
+        </style>
+        <script src="/js/main.js"></script>
+    </head>
 
+
+    <body>
+    </body>
+
+    
+</html>
