general page structure

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    
-<title>Our Funky HTML Page</title>
+
+<title>Contact Us</title>
 
 </head>
 <body>
-Content goes here.
+    <h1>Who are we?</h1>
+        <p>We are .....................</p>
 </body>
 </html>
