--- a/products.html
+++ b/products.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    
-<title>Our Funky HTML Page</title>
+
+<title>Products</title>
 
 </head>
 <body>
-Content goes here.
+    <h2>Products</h2>
+        <p>Product 1</p>
+        <p>Product 2</p>
+        <p>Product 3</p>
 </body>
 </html>
