--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>title</title>
+        <title>ACE GEAR</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="CSS/styles.css">
@@ -13,6 +13,7 @@
 
 
     <body>
+        <h1>ACE GEAR</h1>
         <p></p>
         <p>hello world</p>
         <p>this is a test</p>
