--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="products" href="products.html">
+        <link rel="contact" href="contact.html">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
         </style>
