more html files added for making previews easier

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="products.php">PRODUCTS</a></li>
+                <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="login.php">LOGIN</a></li>
-                <li><a href="cart.php"><img src="images/cart.png" alt="cart"></a></li>
+                <li><a href="login.html">LOGIN</a></li>
+                <li><a href="cart.html"><img src="images/cart.png" alt="cart"></a></li>
             </ul>
             <img src="images/menu.png" alt="menu" class="menu-icon" onclick="toggle()">
         </nav>
