--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Contact Us</title>
+<title>Products</title>
 
 </head>
 <body>
@@ -22,8 +22,11 @@
         <img src="images/menu.png" alt="menu" class="menu-icon" onclick="toggle()">
     </nav>
 
-    <h1>Who are we?</h1>
-        <p>We are .....................</p>
+
+    <h2>Products</h2>
+        <p>Product 1</p>
+        <p>Product 2</p>
+        <p>Product 3</p>
 </body>
 </html>
 
