trial for a new menu bar

--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 
 
     <body>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="index.php"><img src="Images/Logo-no-bg.png" alt="logo"></a>
+        <header>
+            <div>
+                <!-- logo image -->
+                <img id="logo" src="Logo-no-bg.png" alt="Logo">
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="products.html">PRODUCTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="login.html">LOGIN</a></li>
-                <li><a href="cart.html"><img src="images/cart.png" alt="cart"></a></li>
-            </ul>
-            <img src="images/menu.png" alt="menu" class="menu-icon" onclick="toggle()">
-        </nav>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Products</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Login</a>
+            </nav>
+            <div>
+                <!-- cart icon image -->
+                <img id="cart-icon" src="cart-icon.png" alt="Cart">
+            </div>
+        </header>
         
     </body>
 
