updated nav bar code and css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     <body>
         <header>
-            <div>
+            <div id="logo-container">
                 <!-- logo image -->
-                <img id="logo" src="Logo-no-bg.png" alt="Logo">
+                <img id="logo" src="your-logo.png" alt="Logo">
+                <h1>Your Store</h1>
             </div>
             <nav>
                 <a href="#">Home</a>
@@ -25,9 +26,10 @@
                 <a href="#">Contact</a>
                 <a href="#">Login</a>
             </nav>
-            <div>
+            <div id="cart-container">
                 <!-- cart icon image -->
                 <img id="cart-icon" src="cart-icon.png" alt="Cart">
+                <span id="cart-count">0</span>
             </div>
         </header>
         
