--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div id="logo-container">
                 <!-- logo image -->
                 <img id="logo" src="Logo-no-bg.png" alt="Logo">
-                <h1>Your Store</h1>
+                <h1>Ace Gear</h1>
             </div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Products</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="products.html">Products</a>
+                <a href="about.html">About</a>
                 <a href="#">Contact</a>
                 <a href="#">Login</a>
             </nav>
