--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
             <div id="logo-container">
                 <!-- logo image -->
                 <img id="logo" src="Logo-no-bg.png" alt="Logo">
-                <h1>Ace Gear</h1>
+                <h1>Your Store</h1>
+            </div>
+            <div id="search-container">
+                <input type="text" id="search-bar" placeholder="Search...">
+                <button id="search-button">Search</button>
             </div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
-                <a href="about.html">About</a>
-                <a href="#">Contact</a>
+                <a href="#">About</a>
+                <a href="contact.html">Contact</a>
                 <a href="#">Login</a>
             </nav>
             <div id="cart-container">
