view products button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <span id="cart-count">0</span>
             </div>
         </header>
+
+        <button onclick href="products.html" id="ProductsBtn" title="Go to Products Page">View Products</button>
         
     </body>
 
