new login and sign up pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="products.html">Products</a>
                 <a href="#">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="#">Login</a>
+                <a href="login.php">Login</a>
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
