--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <div id="logo-container">
                 <!-- logo image -->
-                <img id="logo" src="Logo-no-bg.png" alt="Logo">
+                <img id="logo" src="Images/Logo-no-bg.png" alt="Logo">
                 <h1>Your Store</h1>
             </div>
             <div id="search-container">
