--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="logo-container">
                 <!-- logo image -->
                 <img id="logo" src="Images/Logo-no-bg.png" alt="Logo">
-                <h1>Your Store</h1>
+                <h1 id="nav-bar-text">ACE GEAR</h1>
             </div>
             <div id="search-container">
                 <input type="text" id="search-bar" placeholder="Search...">
