--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
-                <img id="cart-icon" src="cart-icon.png" alt="Cart">
+                <img id="cart-icon" src="Images/white-cart-icon-no-bg.jpg" alt="Cart">
                 <span id="cart-count">0</span>
             </div>
         </header>
