--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="login.html">LOGIN</a></li>
-            <li><a href="cart.html"><img src="images/cart.png" alt="cart"></a></li>
+            <li><a href="cart.html"><img src="images/cart icon.png" alt="cart"></a></li>
         </ul>
         <img src="images/menu.png" alt="menu" class="menu-icon" onclick="toggle()">
     </nav>
