--- a/contact.html
+++ b/contact.html
@@ -6,21 +6,30 @@
 
 </head>
 <body>
-    
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.php"><img src="Images/Logo-no-bg.png" alt="logo"></a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="products.html">PRODUCTS</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="login.html">LOGIN</a></li>
-            <li><a href="cart.html"><img src="images/cart.png" alt="cart"></a></li>
-        </ul>
-        <img src="images/menu.png" alt="menu" class="menu-icon" onclick="toggle()">
-    </nav>
+
+    <header>
+            <div id="logo-container">
+                <!-- logo image -->
+                <img id="logo" src="Images/Logo-no-bg.png" alt="Logo">
+                <h1 id="nav-bar-text">ACE GEAR</h1>
+            </div>
+            <div id="search-container">
+                <input type="text" id="search-bar" placeholder="Search...">
+                <button id="search-button">Search</button>
+            </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="products.html">Products</a>
+                <a href="#">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="login.php">Login</a>
+            </nav>
+            <div id="cart-container">
+                <!-- cart icon image -->
+                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
+                <span id="cart-count">0</span>
+            </div>
+        </header>
 
     <h1>Who are we?</h1>
         <p>We are .....................</p>
