adding style sheet to product and conact pages

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,15 @@
-<!doctype html>
-<html>
-<head>
-
-<title>Contact Us</title>
-
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>ACE GEAR</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="CSS/styles.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
+        </style>
+        <script src="/js/main.js"></script>
+    </head>
 <body>
 
     <header>
