--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,30 @@
                 <span id="cart-count">0</span>
             </div>
         </header>
+        <h1>Contact Us</h1>
 
     <h1>Who are we?</h1>
         <p>We are .....................</p>
+    <h1>Where are we?</h1>
+        <p>Our address is .....................</p>
+    <h1>How to contact us?</h1>
+
+    <div class="container">
+        <h2>Contact Us</h2>
+        <form action="contact.php" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    
 </body>
 </html>
 
