adding a field for asking users if they are a member before getting in contact

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <h1>How to contact us?</h1>
 
     <div class="container">
-        <h2>Contact Us</h2>
+        <h2>Get in contact with us by filling out the form below :</h2>
         <form action="contact.php" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -55,10 +55,13 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
+            <label for="member?">Are you a Member?</label>
+            <input type="checkbox" id="member?" name="member?" required>
+
             <input type="submit" value="Submit">
         </form>
     </div>
-    
+
 </body>
 </html>
 
