added seperate css for contact page

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <p>Our address is .....................</p>
     <h1>How to contact us?</h1>
 
-    <div class="container">
+    <div class="contact-form-container">
         <h2>Get in contact with us by filling out the form below :</h2>
         <form action="contact.php" method="post">
             <label for="name">Name:</label>
