--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>ACE GEAR</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="CSS/contact.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
         </style>
