--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
         </header>
 
         <button onclick href="products.html" id="ProductsBtn" title="Go to Products Page">View Products</button>
+      
         
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links">
+                    <a href="#reviews">Reviews</a>
+                    <a href="#contact">Contact Us</a>
+                    <a href="about-us.html">About Us</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                </div>
+            </div>
+        </footer>
+
+
     </body>
 
 
