--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,19 @@
         </form>
     </div>
 
+
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-links">
+                <a href="reviews.html">Reviews</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="about-us.html">About Us</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
 
