--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-links">
-                    <a href="#reviews">Reviews</a>
-                    <a href="#contact">Contact Us</a>
+                    <a href="reviews.html">Reviews</a>
+                    <a href="contact.html">Contact Us</a>
                     <a href="about-us.html">About Us</a>
                     <a href="privacy-policy.html">Privacy Policy</a>
                 </div>
