--- a/products.html
+++ b/products.html
@@ -41,6 +41,20 @@
         <p>Product 1</p>
         <p>Product 2</p>
         <p>Product 3</p>
+
+
+
+
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links">
+                    <a href="reviews.html">Reviews</a>
+                    <a href="contact.html">Contact Us</a>
+                    <a href="about-us.html">About Us</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
 
