fixxing text issues

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
-            <label for="member?">Are you a Member?</label>
+            <label for="member?">Please Tick the box below if you are a member of our club</label>
             <input type="checkbox" id="member?" name="member?" required>
 
             <input type="submit" value="Submit">
