--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>ACE GEAR</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="CSS/index.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
         </style>
@@ -37,8 +37,19 @@
             </div>
         </header>
 
+
+
+
+
+        <div class="index-image-container">
+            <img src="index-page-bg.jpg" id= "index-image" alt="Index Page Image">
+        </div>
+
         <button onclick href="products.html" id="ProductsBtn" title="Go to Products Page">View Products</button>
       
+
+
+
         
         <footer>
             <div class="footer-container">
