--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         <div class="index-image-container">
-            <img src="index-page-bg.jpg" id= "index-image" alt="Index Page Image">
+            <img src="Images/index-page-bg.jpg" id= "index-image" alt="Index Page Image">
         </div>
 
         <button onclick href="products.html" id="ProductsBtn" title="Go to Products Page">View Products</button>
