--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <img src="Images/index-page-bg.jpg" id= "index-image" alt="Index Page Image">
         </div>
 
-        
 
-        <button onclick href="products.html" id="ProductsBtn" title="Go to Products Page">View Products</button>
+
+        <button onclick href="products.html" class="ProductsBtn" title="Go to Products Page">View Products</button>
       
 
 
