adding about page and linking with other pages

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="login.php">Login</a>
             </nav>
@@ -35,13 +35,9 @@
                 <span id="cart-count">0</span>
             </div>
         </header>
-        <h1>Contact Us</h1>
 
-    <h1>Who are we?</h1>
-        <p>We are .....................</p>
-    <h1>Where are we?</h1>
-        <p>Our address is .....................</p>
-    <h1>How to contact us?</h1>
+    <h1>Contact Us</h1>
+
 
     <div class="contact-form-container">
         <h2>Get in contact with us by filling out the form below :</h2>
