--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
                 <a href="login.php">Login</a>
             </nav>
