--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
                 <div class="footer-links">
                     <a href="reviews.html">Reviews</a>
                     <a href="contact.html">Contact Us</a>
-                    <a href="about-us.html">About Us</a>
+                    <a href="about.html">About Us</a>
                     <a href="privacy-policy.html">Privacy Policy</a>
                 </div>
             </div>
