--- a/about.html
+++ b/about.html
@@ -41,11 +41,31 @@
 
     <h1>About Us</h1>
     <h2>Who are we?</h2>
-        <p>We are .....................</p>
-    <h2>Where are we?</h2>
-        <p>Our address is .....................</p>
-    <h2>How to contact us?</h2>
-
+        <p>We are ACE GEAR SPORTS, your one and only destination for high-quality sports and workout equipment. 
+            At Ace Gear Sports, we are passionate about helping individuals pursue their fitness goals and enjoy 
+            an active lifestyle. Whether you're a seasoned athlete or just starting your fitness journey, we've 
+            got the gear you need to elevate your performance.</p>
+    <h2>Whats our mission?</h2>
+        <p>Our mission at Ace Gear Sports is to provide a one-stop online shop for a diverse range of sports and 
+            workout equipment, catering to the needs of fitness enthusiasts, athletes, and individuals seeking 
+            top-notch gear for their active pursuits. We believe that a well-equipped athlete is a confident and 
+            motivated one, and our curated selection reflects our commitment to quality and performance.</p>
+    <h2>Why choose us?</h2>
+        <p>Quality Assurance: We understand the importance of reliable and durable equipment. That's why we 
+            handpick each product, ensuring it meets our stringent quality standards. When you shop with Ace Gear 
+            Sports, you can trust that you're investing in gear that stands the test of time.</p>
+        <p>Diverse Selection: From cardio enthusiasts to weightlifters, yoga practitioners to team sports players, 
+            our inventory spans a wide range of activities. Explore our diverse selection of equipment and accessories 
+            tailored to various sports and workout routines.</p>
+        <p>Expert Advice: Not sure which equipment is right for you? Our team of fitness enthusiasts is here to help. 
+            Feel free to reach out for personalized recommendations and expert advice to make informed decisions about 
+            your gear.</p>
+        <p>Convenience: Ace Gear Sports brings the store to your doorstep. Enjoy the convenience of browsing and 
+            shopping for top-notch equipment from the comfort of your home. We ship directly to you, making the 
+            process seamless and hassle-free.</p>
+        
+    <h2>Soooooo what are you waiting for?</h2>
+    <h2>Get and Gear up with ACE GEAR SPORTS!</h2>
 
 
 
