text comand test

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             shopping for top-notch equipment from the comfort of your home. We ship directly to you, making the 
             process seamless and hassle-free.</p>
         
-    <h2>Soooooo what are you waiting for?</h2>
+    <h2>Soooooo what are you waiting for? /n ss</h2>
     <h2>Get and Gear up with ACE GEAR SPORTS!</h2>
 
 
