--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
 
 
-
-        <button onclick href="products.html" class="ProductsBtn" title="Go to Products Page">View Products</button>
-      
+        <div class = products-button-container>
+            <button onclick href="products.html" class="ProductsBtn" title="Go to Products Page">View Products</button>
+        </div>
 
 
 
