--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
         <div class = products-button-container>
             <button onclick href="products.html" class="ProductsBtn" title="Go to Products Page">View Products</button>
+            <a href="products.html" class="ProductsBtn" title="Go to Products Page">View Products</a>
         </div>
 
 
