--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,13 +41,18 @@
         <div class="content-container">
             <h2>Privacy Policy</h2>
             <br>
-            <h4>Last Updated: 28/11/2023</h4>
+            <h3>Last Updated: 28/11/2023</h3>
             <br>
             <p>This page informs you of our policies regarding the collection, use, and disclosure of personal 
                 data when you use our Service and the choices you have associated with that data.</p>
             <p>We use your data to provide and improve the Service. By using the Service, you agree to the 
                 collection and use of information in accordance with this policy.</p>
             <br>
+            <h3>Information Collection & Use</h3>
+            <p>We collect several different types of information for various purposes to provide and improve our 
+                Service to you.</p>
+               <br> 
+            <h3></h3>
         </div>
 
 
