seperated full name into first and last name on sign up page to match the Database

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,8 +51,14 @@
             <h3>Information Collection & Use</h3>
             <p>We collect several different types of information for various purposes to provide and improve our 
                 Service to you.</p>
-               <br> 
-            <h3></h3>
+            <br> 
+            <h3>Types of Data Collected</h3>
+            <p>Personal Data</p>
+            <p>While using our Service, we may ask you to provide us with certain personally identifiable information 
+                that can be used to contact or identify you ("Personal Data"). Personally identifiable information may 
+                include, but is not limited to:</p>
+                <p>-Email Address</p>
+                <p>-First and Last name</p>
         </div>
 
 
