updated privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,7 +41,7 @@
         <div class="content-container">
             <h2>Privacy Policy</h2>
             <br>
-            <h3>Last Updated: 28/11/2023</h3>
+            <h3>Last Updated: 29/11/2023</h3>
             <br>
             <p>This page informs you of our policies regarding the collection, use, and disclosure of personal 
                 data when you use our Service and the choices you have associated with that data.</p>
@@ -57,8 +57,10 @@
             <p>While using our Service, we may ask you to provide us with certain personally identifiable information 
                 that can be used to contact or identify you ("Personal Data"). Personally identifiable information may 
                 include, but is not limited to:</p>
-                <p>-Email Address</p>
-                <p>-First and Last name</p>
+                <p>- Email Address</p>
+                <p>- First and Last name</p>
+                <p>- Address</p>
+                <p>- Cookies and Useage Data</p>
         </div>
 
 
