--- a/login.html
+++ b/login.html
@@ -24,3 +24,15 @@
                 <button id="search-button">Search</button>
             </div>
             <nav>
+ <a href="index.html">Home</a>
+                <a href="products.html">Products</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="login.php">Login</a>
+            </nav>
+            <div id="cart-container">
+                <!-- cart icon image -->
+                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
+                <span id="cart-count">0</span>
+            </div>
+        </header>
