--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
                 <a href="products.html">Products</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="login.php">Login</a>
+                <a href="login.php">Cart</a>
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
