--- a/cart.html
+++ b/cart.html
@@ -36,3 +36,5 @@
                 <span id="cart-count">0</span>
             </div>
         </header>
+
+        <h1> Log in or create an account now to get these exclusive benefits.</h1>
