--- a/cart.html
+++ b/cart.html
@@ -37,4 +37,13 @@
             </div>
         </header>
 
-        <h1> Log in or create an account now to get these exclusive benefits.</h1>
+        <h1> Log in or Sign up now to get these exclusive benefits.</h1>
+        <div class="b-header_utility-item b-header_account bfx-remove-element">
+<a class="b-header_account-link js-register" href="signup.php" data-href="" role="button" aria-label="Sign up">
+Sign Up
+</a>
+<span>|</span>
+<a class="b-header_account-link js-login" href="login.php" data-href="login.php" role="button" aria-label="Login to your account">
+Log In
+</a>
+</div>
