--- a/cart.html
+++ b/cart.html
@@ -38,12 +38,5 @@
         </header>
 
         <h1> Log in or Sign up now to get these exclusive benefits.</h1>
-        <div class="b-header_utility-item b-header_account bfx-remove-element">
-<a class="b-header_account-link js-register" href="signup.php" data-href="" role="button" aria-label="Sign up">
-Sign Up
-</a>
-<span>|</span>
-<a class="b-header_account-link js-login" href="login.php" data-href="login.php" role="button" aria-label="Login to your account">
-Log In
-</a>
-</div>
+       <button type="button" class="btn btn-primary btn-lg" href="login.php">Log In</button>
+<button type="button" class="btn btn-secondary btn-lg" href="signup.php">Sign Up</button>
