--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <a href="products.html">Products</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="login.php">Cart</a>
+                <a href="login.php">Login</a>
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
-                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
+                <img id="cart-icon" src="Images/cart-no-bg.png"  href="cart.html" alt="Cart">
                 <span id="cart-count">0</span>
             </div>
         </header>
