--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
-                <img id="cart-icon" src="Images/cart-no-bg.png"  href="cart.html" alt="Cart">
+                <p><a href="cart.html"
+                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
                 <span id="cart-count">0</span>
+                </a></p>
             </div>
         </header>
 
