--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
-                <p><a href="cart.html"
-                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
+                <img id="cart-icon" href="cart.html" src="Images/cart-no-bg.png" alt="Cart">
                 <span id="cart-count">0</span>
-                </a></p>
             </div>
         </header>
 
