--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
             <div id="cart-container">
                 <!-- cart icon image -->
-                <img id="cart-icon" href="cart.html" src="Images/cart-no-bg.png" alt="Cart">
+                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
                 <span id="cart-count">0</span>
             </div>
         </header>
