--- a/products.html
+++ b/products.html
@@ -30,7 +30,8 @@
             <a href="login.php">Login</a>
         </nav>
         <div id="cart-container">
-            <!-- cart icon image -->
+            <!-- cart icon image with link to cart page -->
+            <a href="cart.html">
             <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
             <span id="cart-count">0</span>
         </div>
