--- a/cart.html
+++ b/cart.html
@@ -32,8 +32,10 @@
             </nav>
             <div id="cart-container">
                 <!-- cart icon image with link to cart page -->
-                <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
-                <span id="cart-count">0</span>
+                <a href="cart.html">
+                    <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
+                    <span id="cart-count">0</span>
+                </a>
             </div>
         </header>
 
