--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
         </nav>
         <div id="cart-container">
             <!-- cart icon image with link to cart page -->
-            <a href="cart.html">
+            <a href="cart.php">
                 <img id="cart-icon" src="Images/cart-no-bg.png" alt="Cart">
                 <span id="cart-count">0</span>
             </a>
