--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="products.html">Products</a>
+                <a href="products.php">Products</a>
                 <a href="about.html">About</a>
                 <a href="members-blog.php">Blog</a>
                 <a href="contact.html">Contact</a>
@@ -66,8 +66,8 @@
             </div>
 
             <div class = products-button-container>
-                <!--<button onclick href="products.html" class="ProductsBtn" title="Go to Products Page">VIEW PRODUCTS</button>-->
-                <a href="products.html" class="ProductsBtn" title="Go to Products Page">VIEW PRODUCTS</a> 
+                <!--<button onclick href="products.php" class="ProductsBtn" title="Go to Products Page">VIEW PRODUCTS</button>-->
+                <a href="products.php" class="ProductsBtn" title="Go to Products Page">VIEW PRODUCTS</a> 
             </div>
             
         </div>
