--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,7 +24,7 @@
                 <button id="search-button">Search</button>
             </div>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="index.php">Home</a>
                 <a href="products.php">Products</a>
                 <a href="about.html">About</a>
                 <a href="members-blog.php">Blog</a>
