--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             process seamless and hassle-free.</p>
     </div>    
     <h2>Soooooo what are you waiting for?</h2>
-    <h2>Get and Gear up with ACE GEAR SPORTS!</h2>
+    <h2>Get up and Gear up with ACE GEAR SPORTS!</h2>
 
 
 
